# rpgassist

./: .gitignore  Cargo.toml  README.md
src/: body.rs  details.rs  direction.rs  ext.rs  gender.rs  id.rs  lib.rs  main.rs  misc.rs  modifier.rs  ranking.rs  resolve.rs  serialize.rs  stat.rs
src/animal/: pet.rs
src/body/: birthmark.rs  location.rs
src/direction/: bilateral.rs
src/ext/: named.rs  natural_join.rs  typename.rs
src/misc/: color.rs  shape.rs
src/ranking/: rank.rs
src/resolve/: resolve_in_place.rs
