[package]
name = "rpgassist"
version = "0.1.0"
edition = "2024"
authors = ["Markku Sukanen <markku.sukanen@gmail.com>"]
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
dicebag = "0.3"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
paste = "1"

[badges]
maintenance = { status = "experimental" }
