[package]
name = "rpgassist"
version = "0.1.10"
edition = "2024"
authors = ["Markku Sukanen <markku.sukanen@gmail.com>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/msukanen/rpgassist"
description = "Simple assist traits, serde (de)serializers, etc."

[dependencies]
dicebag = "0.3"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
paste = "1"
log = "0.4.28"
env_logger = "0.11.8"

[badges]
maintenance = { status = "experimental" }
